@@ -1,3 +1,11 @@
+2002-03-27  Andreas Schwab  <schwab@suse.de>
+
+	* config/tc-i386.c (md_assemble): Set fx_pcrel_adjust to size of
+	field for pc-relative fixups.
+	(md_estimate_size_before_relax): Likewise.
+	(tc_gen_reloc): Subtract fx_pcrel_adjust instead of fx_size for
+	pc-relative fixups in 64bit mode.
+
 2002-03-20  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* config/tc-arm.c (vfp_dp_reg_required_here): Fix typo
